--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "@types/node": "^10.5.2",
+    "@types/uuid": "^3.4.3",
     "reflect-metadata": "^0.1.12",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
-    "typescript": "^2.9.2"
+    "typescript": "^2.9.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {},
   "scripts": {
